crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-basic_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ]
      },
      "primary_key": {
        "id": 1015
      },
      "score": 0.28
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ]
      },
      "primary_key": {
        "id": 821
      },
      "score": 0.24
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ]
      },
      "primary_key": {
        "id": 449
      },
      "score": 0.23
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour."
        ]
      },
      "primary_key": {
        "id": 1193
      },
      "score": 0.2
    }
  ]
}
