crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-hybrid_single_column_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
        ]
      },
      "primary_key": {
        "id": 525
      },
      "score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      },
      "score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\)."
        ]
      },
      "primary_key": {
        "id": 772
      },
      "score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      },
      "score": 0.01
    }
  ]
}
